@@ -1,3 +1,7 @@
+2016-05-05  Robert D. Vincent <robert.d.vincent@mcgill.ca>
+   * libsrc/minc_simple.c, libsrc/minc_simple.h: Improved the usefulness
+	of minc_get_world_transform() and added minc_transform_to_world().
+
 2016-02-09  Robert D. Vincent <robert.d.vincent@mcgill.ca>
    * libsrc2/dimension.c, libsrc2/volume.c, testdir/minc2-dimension-test.c:
 	Existing code did not properly implement miset_dimension_widths()
